RG-2542 Cleanup column animation API; fixed to work on mobiles

--- a/src/table/table.stories.css
+++ b/src/table/table.stories.css
@@ -212,6 +212,9 @@
 .columnAnimationEmulator {
   position: absolute;
   top: 0;
+  left: 0;
+
+  width: 0;
 
   height: 100%;
 
